--- a/sistema_kip_k.html
+++ b/sistema_kip_k.html
@@ -14,7 +14,7 @@
     
     <nav>
         <div class="logo">
-            <a href="/index.html">Virtual Technical Education</a>
+            <a href="/panel.html">Virtual Technical Education</a>
         </div>
         <ul id="menuList">
             <li></li>
@@ -268,14 +268,14 @@
                 <div class="row">
                     <div class="">
                         <p style="color: black;" class="m-0">Support Kip 71
-                            &copy;  Todos los derechos reservados. José Escalona® | Designed by <a href="https://portafoliosjesclona.000webhostapp.com/" style="color: blue;">JEscalona</a>
+                            &copy;  Todos los derechos reservados. XDV® | Designed by <a href="" style="color: blue;">XDV</a>
                         </p>
                         <br>
                         <div class="linear"></div>
                         <div style="display: flex; justify-content: center;" class="icons">
-                            <a href="https://www.linkedin.com/public-profile/settings"><img style="width: 40px;" src="/IMG/linkdin.svg" alt=""></a>
-                            <a href="https://wa.me/4129854529?text=¡Hola!%20"><img style="width: 40px;" src="/IMG/wp.svg" alt=""></a>
-                            <a href="https://www.instagram.com/xdv.vzla?igsh=dGc4ajdrYmdjYnVh"><img style="width: 40px;" src="/IMG/instagram.svg" alt=""></a>                                
+                            <img style="width: 40px;" src="/IMG/linkdin.svg" alt="">
+                            <img style="width: 40px;" src="/IMG/wp.svg" alt="">
+                            <img style="width: 40px;" src="/IMG/instagram.svg" alt="">                                
                         </div>
     
                     </div>
