--- a/serie_71_.html
+++ b/serie_71_.html
@@ -42,7 +42,7 @@
     </script>
 
         
-        <div class="header-img">
+        <div class="header-img-kip-serie">
             <p>DOCUMENTACTIÓN</p>
             <H1>FORMACIÓN-TÉCNICA</H1>
         </div>
