--- a/sistema_kip_k.html
+++ b/sistema_kip_k.html
@@ -45,7 +45,7 @@
 
         
 
-        <div class="header-img">
+        <div class="header-img-sistema-kip">
             <p>DOCUMENTACTIÓN</p>
             <H1>FORMACIÓN-TÉCNICA</H1>
         </div>
