--- a/panel.html
+++ b/panel.html
@@ -16,8 +16,7 @@
         </div>
         <ul id="menuList">
             <li></li>
-            <li><a href="/serie_71_.html">KIP Serie 71</a></li>
-            <li><a href="/sistema_kip_k.html">Sistema KIP K</a></li>
+            <li><a href="/serie_71_.html">Access documentation</a></li>
         </ul>
         <div class="menu-icon">
             <i class="bx bx-menu" onclick="toggleMenu()"></i>
