--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
                 <form action="">
                     <div class="row">
                         <h6>Inicar Sesion</h6>
+                        <small>Note: To access the technical documentation you must enter the partner portal</small>
                         
                         <div class="inpus">
                             <input type="text" name="user" id="user" placeholder="Ingrese su Usuario" required>
@@ -23,7 +24,7 @@
                         </div>
                     
                         <div class="btn-l">
-                            <button type="submit">Ingresar</button>
+                            <button type="submit"><a href="">Ingresar</a></button>
                         </div>
                     </div>
                 </form>
