--- a/panel.html
+++ b/panel.html
@@ -16,7 +16,7 @@
         </div>
         <ul id="menuList">
             <li></li>
-            <li><a href="/login.html">Access documentation</a></li>
+            <li><a href="/login.php">Access documentation</a></li>
         </ul>
         <div class="menu-icon">
             <i class="bx bx-menu" onclick="toggleMenu()"></i>
