--- a/panel.html
+++ b/panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>Sopport_Kip</title>
 </head>
 <body>
@@ -12,11 +12,11 @@
 
     <nav>
         <div class="logo">
-            <a href="/panel.html">Virtual Technical Education</a>
+            <a href="./panel.html">Virtual Technical Education</a>
         </div>
         <ul id="menuList">
             <li></li>
-            <li><a href="/login.php">Access documentation</a></li>
+            <li><a href="./login.php">Access documentation</a></li>
         </ul>
         <div class="menu-icon">
             <i class="bx bx-menu" onclick="toggleMenu()"></i>
@@ -50,7 +50,7 @@
         <!--start public -->
         <div class="container-public">
             <div class="img-cont">
-                <img src="/IMG/kip-71.png" alt="">
+                <img src="./IMG/kip-71.png" alt="">
             </div>
             
             <div class="text">
@@ -96,9 +96,9 @@
                         <br>
                         <div class="linear"></div>
                         <div style="display: flex; justify-content: center;" class="icons">
-                            <img style="width: 40px;" src="/IMG/linkdin.svg" alt="">
-                            <img style="width: 40px;" src="/IMG/wp.svg" alt="">
-                            <img style="width: 40px;" src="/IMG/instagram.svg" alt="">                                
+                            <img style="width: 40px;" src="./IMG/linkdin.svg" alt="">
+                            <img style="width: 40px;" src="./IMG/wp.svg" alt="">
+                            <img style="width: 40px;" src="./IMG/instagram.svg" alt="">                                
                         </div>
     
                     </div>
