--- a/serie_71_.html
+++ b/serie_71_.html
@@ -14,7 +14,7 @@
     
     <nav>
         <div class="logo">
-            <a href="./panel.html">Virtual Technical Education</a>
+            <a href="./panel_gc.html">Virtual Technical Education</a>
         </div>
         <ul id="menuList">
             <li></li>
@@ -301,9 +301,9 @@
                     <br>
                     <div class="linear"></div>
                     <div style="display: flex; justify-content: center;" class="icons">
-                        <img style="width: 40px;" src="/IMG/linkdin.svg" alt="">
-                        <img style="width: 40px;" src="/IMG/wp.svg" alt="">
-                        <img style="width: 40px;" src="/IMG/instagram.svg" alt="">                                
+                        <img style="width: 40px;" src="./IMG/linkdin.svg" alt="">
+                        <img style="width: 40px;" src="./IMG/wp.svg" alt="">
+                        <img style="width: 40px;" src="./IMG/instagram.svg" alt="">                                
                     </div>
 
                 </div>
