--- a/sistema_kip_k.html
+++ b/sistema_kip_k.html
@@ -14,7 +14,7 @@
     
     <nav>
         <div class="logo">
-            <a href="./panel.html">Virtual Technical Education</a>
+            <a href="./panel_gc.html">Virtual Technical Education</a>
         </div>
         <ul id="menuList">
             <li></li>
