--- a/panel.html
+++ b/panel.html
@@ -6,6 +6,11 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Sopport_Kip</title>
+
+     <!--FRAMEWORK BOOSTSTRAP-->
+     <link rel="stylesheet" href="./CSS/framework/bootstrap.css">
+     <!--FRAMEWORK BOOSTSTRAP-->
+
 </head>
 <body>
 
@@ -109,7 +114,12 @@
 
 
 
-                <script src="/JS/nav.js"></script>
+        <!--SCRIPT JS-->
+        <script src="./JS/nav.js"></script>
+        <script src="./JS/main.js"></script>
+        <script src="./JS/Bootstrap.js"></script>
+        <!--SCRIPT JS-->
 
-</body>
+
+    </body>
 </html>
