--- a/panel_gc.html
+++ b/panel_gc.html
@@ -8,6 +8,9 @@
     <title>Partner support_kip</title>
 
 
+    <!--FRAMEWORK BOOSTSTRAP-->
+    <link rel="stylesheet" href="./CSS/framework/bootstrap.css">
+    <!--FRAMEWORK BOOSTSTRAP-->
 
 </head>
 <body>
@@ -20,6 +23,15 @@
             <li></li>
             <li><a href="./serie_71_.html">KIP Serie 71</a></li>
             <li><a href="./sistema_kip_k.html">Sistema KIP K</a></li>
+
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  USER
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
+                </ul>
+              </div>
         </ul>
         <div class="menu-icon">
             <i class="bx bx-menu" onclick="toggleMenu()"></i>
@@ -119,9 +131,11 @@
 
         
 
-
-        <script src="/JS/nav.js"></script>
-
+        <!--SCRIPT JS-->
+        <script src="./JS/nav.js"></script>
+        <script src="./JS/main.js"></script>
+        <script src="./JS/Bootstrap.js"></script>
+        <!--SCRIPT JS-->
 
 </body>
 </html>
