--- a/serie_71_.html
+++ b/serie_71_.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <title>KIP Serie 71</title>
 
-
+    <!--FRAMEWORK BOOSTSTRAP-->
+    <link rel="stylesheet" href="./CSS/framework/bootstrap.css">
+    <!--FRAMEWORK BOOSTSTRAP-->
 
 </head>
 <body>
@@ -315,7 +317,10 @@
 
 
 
-        <script src="/JS/nav.js"></script>
-
+        <!--SCRIPT JS-->
+        <script src="./JS/nav.js"></script>
+        <script src="./JS/main.js"></script>
+        <script src="./JS/Bootstrap.js"></script>
+        <!--SCRIPT JS-->
 </body>
 </html>
