--- a/sistema_kip_k.html
+++ b/sistema_kip_k.html
@@ -8,6 +8,9 @@
     <title>Sistema KIP K</title>
 
 
+     <!--FRAMEWORK BOOSTSTRAP-->
+     <link rel="stylesheet" href="./CSS/framework/bootstrap.css">
+     <!--FRAMEWORK BOOSTSTRAP-->
 
 </head>
 <body>
@@ -288,8 +291,11 @@
         
 
 
-        <script src="/JS/nav.js"></script>
-
+        <!--SCRIPT JS-->
+        <script src="./JS/nav.js"></script>
+        <script src="./JS/main.js"></script>
+        <script src="./JS/Bootstrap.js"></script>
+        <!--SCRIPT JS-->
 
 </body>
 </html>
