--- a/sistema_kip_k.html
+++ b/sistema_kip_k.html
@@ -23,6 +23,16 @@
             <li></li>
             <li><a href="./serie_71_.html">KIP Serie 71</a></li>
             <li><a href="./sistema_kip_k.html">Sistema KIP K</a></li>
+
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  USER
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
+                </ul>
+              </div>
+              
         </ul>
         <div class="menu-icon">
             <i class="bx bx-menu" onclick="toggleMenu()"></i>
