--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav>
         <div class="logo">
-            <a href="./panel.html">Virtual Technical Education</a>
+            <a href="./index.html">Virtual Technical Education</a>
         </div>
         <ul id="menuList">
             <li></li>
