--- a/login.html
+++ b/login.html
@@ -10,6 +10,8 @@
 <body>
 
 
+            
+
 
             <div class="container-login">
                 <form action="" method="POST">
@@ -35,6 +37,10 @@
                         </div>
                     </>
                 </form>
+
+                <div class="inicio">
+                    <a href="./index.html">Ir Al Inicio</a>
+                </div>    
             </div>   
 
 
